resources/assets/js/gutenberg/editor-style.scss
.pattern-bg {
	background: url(#{$IMAGES-PATH}/light-pattern.png);
	background-size: 50%;
	padding-top: 50px;
	padding-bottom: 50px;
	margin-top: 0px;
	margin-bottom: 0px;
}
.wp-admin {
	.wp-block-willamette-blocks-image-box{
		&__content {
			position: relative;
		}
	}
	.wp-block-group {
		padding: 0px;
	}
	.is-style-Highlighted {
		background: $purple !important;
		color: $white !important;
	}
}
p {
	font-family: $body-font;
	color: $grey;
}
.is-style-leaf{
	position: relative;
	&::after {
		background: url(#{$IMAGES-PATH}/leaf.svg) no-repeat;
		content: "";
		position: absolute;
		top: 0;
		width: 200px;
		bottom: 0;
		left: 14%;
		background-size: 200px 200px;
		background-position: left 0px bottom -40px;
	}
}
.is-style-acorn{
	position: relative;
	&::after {
		background: url(#{$IMAGES-PATH}/acorn.svg) no-repeat;
		content: "";
		position: absolute;
		bottom: 60px;
		height: 100px;
		width: 100px;
		right: 14%;
		background-position: right 0px bottom 0px;
	}
}
h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is-style-Highlighted, h5.is-style-Highlighted {
	background: $purple;
	padding: 20px;
	color: $white;
	display: inline-block;
	padding-left: 100px;
}
.wp-block-columns.narrow-gutter{
	justify-content: center !important;
	.wp-block-willamette-blocks-image-box {
		margin: 0px 5px;
	}	
}
.wp-block-columns {
	.four-image-bottom, .four-image-top {
		margin: 0px;
	}
	&.five-column-three {
		flex-direction: row;
		flex-wrap: wrap;
		flex-grow: 0;
		justify-content: center;
		.wp-block-column {
			min-width: 30%;
			flex-grow: 0;
		}
	}
}
.wp-block-button {
	margin: 20px 0px 10px 0px;
}
.wp-block-column:not(:first-child){
	margin-left: 0px;
	padding: 5px;
}
.wp-block-willamette-blocks-image-box{
	position: relative;

	img {
		max-width: 100%;
		height: auto;
		width: auto;
	}
	p {
		max-width: 650px;
		line-height: 1.4;
		color: $white;
	}
	h1, h2, h3, h4, h5, h6 {
		font-family: $alt-header-font;
		font-size: 2.2em;
		font-weight: 800;
		padding: 10px 30px;
		line-height: 1.1;
		color: $white;
		min-height: 80px;
		display: flex;
		align-items: center;
	}
	&__content {	
		position: absolute;
		max-width: $max-width;
	}
	.wp-block-group {
		padding: 20px 5px;
	}
	.has-purple-background-color {
		background-color: $transparent-purple;
	}
	.has-teal-background-color {
		background-color: $transparent-teal;
	}
	.has-lime-background-color {
		background-color: $transparent-lime;
	}
	.has-green-background-color {
		background-color: $transparent-green;
	}
	.has-orange-background-color {
		background-color: $transparent-orange;
	}
	.has-blue-background-color {
		background-color: $transparent-blue;
	}
	.has-dark-blue-background-color {
		background-color: $transparent-dark-blue;
	}

	.is-style-overhang-middle &__content{
		width: 85%;
		bottom: -2px;
		left: 50%;
		transform: translateX(-50%);
	}
	.is-style-overhang-left  &__content{
		width: calc(100% + 20px);
		bottom: 10px;
		left: -20px;
		@include screen-px(782){
			width: 100%;
			left: 0px;
		}
	}
	.is-style-overhang-right  &__content{
		width: calc(100% + 20px);
		bottom: 10px;
		right: -20px;
		@include screen-px(782){
			width: 100%;
			right: 0px;
		}
	}
	.is-style-no-overhang  &__content{
		width: 100%;
		bottom: 10px;
	}
	.is-style-full-width-center  &__content{
		top: 50%;
		transform: translateY(-50%);
		width: 100%;
	}
	.wp-block-columns {
		padding: 30px;
	}
}
.wp-block-willamette-blocks-image-box.alignfull img{
	@include screen-px(782){
		height: auto;
		min-height: 400px;
		width: auto;
		object-fit: cover;
	}
		
}
	// .is-style-align-full  &__content{

	// }
	// .is-style-align-wide  &__content{

	// }

